fixing html homepage

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="https://supradeepbokkasum.github.io/cosmicchutney-assets/css/common.css" />
   <script>
      window.pageConfig = {
-      title: "CosmicChutney - CIDR calculator",
-      iframeUrl: "https://4c32db5a.cidr-calculator-2kl.pages.dev/",
-      headerTitle: "CIDR calculator"
+      title: "CosmicChutney - Date & Time Difference Checker",
+      iframeUrl: "https://datediff.cdntest.workers.dev/",
+      headerTitle: "Date & Time Difference Checker"
     };
   </script>
   <script src="https://supradeepbokkasum.github.io/cosmicchutney-assets/js/common.js" defer></script>
